--- a/ai-model-app/src/app/globals.css
+++ b/ai-model-app/src/app/globals.css
@@ -12,15 +12,101 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+[data-theme="dark"] {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+  body {
+    background-color: #181818;
+    color: rgb(216, 216, 216);
+  }
 }
-
+[data-theme="light"] {
+  :root {
+    --background: #eaeaea;
+    --foreground: #070707;
+  }
+  body {
+    background-color: rgb(241, 241, 241);
+    color: #131111;
+  }
+}
+.dark {
+  background-color: #141414;
+  color: white;
+}
+.light {
+  background-color: white;
+  color: #070707;
+}
+.btndark {
+  background-color: #262626;
+}
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+/* Mobile: 400px and up */
+@media (min-width: 400px) {
+  body {
+    width: 100%;
+    padding: 2px;
+  }
+}
+
+/* Tablet: 728px and up */
+@media (min-width: 728px) {
+  body {
+    width: 700px;
+    margin: 0 auto;
+  }
+}
+
+/* Desktop: 1200px and up */
+@media (min-width: 1024px) {
+  body {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+/* Extra large: 1500px and up */
+@media (min-width: 1500px) {
+  body {
+    max-width: 1500px;
+    margin: 0 auto;
+  }
+}
+.transition {
+  transition: ease-in-out 300;
+}
+@keyframes uploadBtn {
+  0% {
+    bottom: 0px;
+  }
+  25% {
+    bottom: 20px;
+  }
+  50% {
+    bottom: 15px;
+  }
+  75% {
+    bottom: 20px;
+  }
+  100% {
+    bottom: 0px;
+  }
+}
+.uploadBtn {
+  animation: uploadBtn 2s infinite;
+}
+.uploadBtn:hover {
+  animation-play-state: paused;
 }
