--- a/ai-model-app/src/app/globals.css
+++ b/ai-model-app/src/app/globals.css
@@ -51,8 +51,11 @@ body {
   max-width: 100%;
   padding: 0;
   margin: 0;
+  position: relative;
 }
-
+.mainContent {
+  position: absolute;
+}
 /* Mobile: 400px and up */
 @media (min-width: 400px) {
   body {
@@ -82,6 +85,11 @@ body {
   body {
     max-width: 1500px;
     margin: 0 auto;
+  }
+}
+@media (min-width: 2000px) {
+  body {
+    scale: 150%;
   }
 }
 .transition {
@@ -126,4 +134,33 @@ body {
 
 .no-scrollbar {
   scrollbar-width: none;
+}
+@keyframes ChatAnimation {
+  0% {
+    right: -20%;
+    scale: 5%;
+  }
+  100% {
+    right: 0%;
+    scale: 100%;
+  }
+}
+.chatAnimation {
+  animation: ChatAnimation;
+  animation-duration: 0.5s;
+}
+@keyframes ChatCloseAnimation {
+  0% {
+    right: 0%;
+    scale: 100%;
+  }
+  100% {
+    right: -20%;
+    scale: 5%;
+  }
+}
+
+[open="false"] {
+  animation: ChatCloseAnimation;
+  animation-duration: 0.5s;
 }
